// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker prop: attrs of input 1`] = `
<div
  class="mx-datepicker"
>
  <div
    class="mx-input-wrapper"
  >
    <input
      autocomplete="off"
      class="test"
      name="test"
      placeholder="test placeholder"
      type="number"
    />
    <i
      class="mx-icon-calendar"
    >
      <anonymous-stub />
    </i>
  </div>
  <popup-stub
    appendtobody="true"
  >
    <div
      class="mx-datepicker-content"
    >
      <div
        class="mx-datepicker-body"
      >
        <div />
      </div>
    </div>
  </popup-stub>
</div>
`;

exports[`DatePicker prop: clearable 1`] = `
<div
  class="mx-datepicker"
>
  <div
    class="mx-input-wrapper"
  >
    <input
      autocomplete="off"
      class="mx-input"
      name="date"
      placeholder=""
      type="text"
    />
    <i
      class="mx-icon-calendar"
    >
      <anonymous-stub />
    </i>
  </div>
  <popup-stub
    appendtobody="true"
  >
    <div
      class="mx-datepicker-content"
    >
      <div
        class="mx-datepicker-body"
      >
        <div />
      </div>
    </div>
  </popup-stub>
</div>
`;

exports[`DatePicker prop: editable 1`] = `
<div
  class="mx-datepicker"
>
  <div
    class="mx-input-wrapper"
  >
    <input
      autocomplete="off"
      class="mx-input"
      name="date"
      placeholder=""
      readonly="readonly"
      type="text"
    />
    <i
      class="mx-icon-calendar"
    >
      <anonymous-stub />
    </i>
  </div>
  <popup-stub
    appendtobody="true"
  >
    <div
      class="mx-datepicker-content"
    >
      <div
        class="mx-datepicker-body"
      >
        <div />
      </div>
    </div>
  </popup-stub>
</div>
`;

exports[`DatePicker prop: formatter 1`] = `
<table
  class="mx-table mx-table-date"
>
  <thead>
    <tr>
      <th
        class="mx-week-number-header"
      />
       
      <th>
        Su
      </th>
      <th>
        Mo
      </th>
      <th>
        Tu
      </th>
      <th>
        We
      </th>
      <th>
        Th
      </th>
      <th>
        Fr
      </th>
      <th>
        Sa
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr
      class="mx-date-row"
    >
      <td
        class="mx-week-number"
        data-row-col="0,0"
      >
        
            29
          
      </td>
       
      <td
        class="cell not-current-month"
        data-row-col="0,0"
        title="2019-09-29"
      >
        <div>
          29
        </div>
      </td>
      <td
        class="cell not-current-month"
        data-row-col="0,1"
        title="2019-09-30"
      >
        <div>
          30
        </div>
      </td>
      <td
        class="cell"
        data-row-col="0,2"
        title="2019-10-01"
      >
        <div>
          1
        </div>
      </td>
      <td
        class="cell"
        data-row-col="0,3"
        title="2019-10-02"
      >
        <div>
          2
        </div>
      </td>
      <td
        class="cell"
        data-row-col="0,4"
        title="2019-10-03"
      >
        <div>
          3
        </div>
      </td>
      <td
        class="cell"
        data-row-col="0,5"
        title="2019-10-04"
      >
        <div>
          4
        </div>
      </td>
      <td
        class="cell"
        data-row-col="0,6"
        title="2019-10-05"
      >
        <div>
          5
        </div>
      </td>
    </tr>
    <tr
      class="mx-date-row"
    >
      <td
        class="mx-week-number"
        data-row-col="1,0"
      >
        
            6
          
      </td>
       
      <td
        class="cell"
        data-row-col="1,0"
        title="2019-10-06"
      >
        <div>
          6
        </div>
      </td>
      <td
        class="cell"
        data-row-col="1,1"
        title="2019-10-07"
      >
        <div>
          7
        </div>
      </td>
      <td
        class="cell"
        data-row-col="1,2"
        title="2019-10-08"
      >
        <div>
          8
        </div>
      </td>
      <td
        class="cell"
        data-row-col="1,3"
        title="2019-10-09"
      >
        <div>
          9
        </div>
      </td>
      <td
        class="cell"
        data-row-col="1,4"
        title="2019-10-10"
      >
        <div>
          10
        </div>
      </td>
      <td
        class="cell"
        data-row-col="1,5"
        title="2019-10-11"
      >
        <div>
          11
        </div>
      </td>
      <td
        class="cell"
        data-row-col="1,6"
        title="2019-10-12"
      >
        <div>
          12
        </div>
      </td>
    </tr>
    <tr
      class="mx-date-row mx-active-week"
    >
      <td
        class="mx-week-number"
        data-row-col="2,0"
      >
        
            13
          
      </td>
       
      <td
        class="cell active"
        data-row-col="2,0"
        title="2019-10-13"
      >
        <div>
          13
        </div>
      </td>
      <td
        class="cell"
        data-row-col="2,1"
        title="2019-10-14"
      >
        <div>
          14
        </div>
      </td>
      <td
        class="cell"
        data-row-col="2,2"
        title="2019-10-15"
      >
        <div>
          15
        </div>
      </td>
      <td
        class="cell"
        data-row-col="2,3"
        title="2019-10-16"
      >
        <div>
          16
        </div>
      </td>
      <td
        class="cell"
        data-row-col="2,4"
        title="2019-10-17"
      >
        <div>
          17
        </div>
      </td>
      <td
        class="cell"
        data-row-col="2,5"
        title="2019-10-18"
      >
        <div>
          18
        </div>
      </td>
      <td
        class="cell"
        data-row-col="2,6"
        title="2019-10-19"
      >
        <div>
          19
        </div>
      </td>
    </tr>
    <tr
      class="mx-date-row"
    >
      <td
        class="mx-week-number"
        data-row-col="3,0"
      >
        
            20
          
      </td>
       
      <td
        class="cell"
        data-row-col="3,0"
        title="2019-10-20"
      >
        <div>
          20
        </div>
      </td>
      <td
        class="cell"
        data-row-col="3,1"
        title="2019-10-21"
      >
        <div>
          21
        </div>
      </td>
      <td
        class="cell"
        data-row-col="3,2"
        title="2019-10-22"
      >
        <div>
          22
        </div>
      </td>
      <td
        class="cell"
        data-row-col="3,3"
        title="2019-10-23"
      >
        <div>
          23
        </div>
      </td>
      <td
        class="cell"
        data-row-col="3,4"
        title="2019-10-24"
      >
        <div>
          24
        </div>
      </td>
      <td
        class="cell"
        data-row-col="3,5"
        title="2019-10-25"
      >
        <div>
          25
        </div>
      </td>
      <td
        class="cell"
        data-row-col="3,6"
        title="2019-10-26"
      >
        <div>
          26
        </div>
      </td>
    </tr>
    <tr
      class="mx-date-row"
    >
      <td
        class="mx-week-number"
        data-row-col="4,0"
      >
        
            27
          
      </td>
       
      <td
        class="cell"
        data-row-col="4,0"
        title="2019-10-27"
      >
        <div>
          27
        </div>
      </td>
      <td
        class="cell"
        data-row-col="4,1"
        title="2019-10-28"
      >
        <div>
          28
        </div>
      </td>
      <td
        class="cell"
        data-row-col="4,2"
        title="2019-10-29"
      >
        <div>
          29
        </div>
      </td>
      <td
        class="cell"
        data-row-col="4,3"
        title="2019-10-30"
      >
        <div>
          30
        </div>
      </td>
      <td
        class="cell"
        data-row-col="4,4"
        title="2019-10-31"
      >
        <div>
          31
        </div>
      </td>
      <td
        class="cell not-current-month"
        data-row-col="4,5"
        title="2019-11-01"
      >
        <div>
          1
        </div>
      </td>
      <td
        class="cell not-current-month"
        data-row-col="4,6"
        title="2019-11-02"
      >
        <div>
          2
        </div>
      </td>
    </tr>
    <tr
      class="mx-date-row"
    >
      <td
        class="mx-week-number"
        data-row-col="5,0"
      >
        
            3
          
      </td>
       
      <td
        class="cell not-current-month"
        data-row-col="5,0"
        title="2019-11-03"
      >
        <div>
          3
        </div>
      </td>
      <td
        class="cell not-current-month"
        data-row-col="5,1"
        title="2019-11-04"
      >
        <div>
          4
        </div>
      </td>
      <td
        class="cell not-current-month"
        data-row-col="5,2"
        title="2019-11-05"
      >
        <div>
          5
        </div>
      </td>
      <td
        class="cell not-current-month"
        data-row-col="5,3"
        title="2019-11-06"
      >
        <div>
          6
        </div>
      </td>
      <td
        class="cell not-current-month"
        data-row-col="5,4"
        title="2019-11-07"
      >
        <div>
          7
        </div>
      </td>
      <td
        class="cell not-current-month"
        data-row-col="5,5"
        title="2019-11-08"
      >
        <div>
          8
        </div>
      </td>
      <td
        class="cell not-current-month"
        data-row-col="5,6"
        title="2019-11-09"
      >
        <div>
          9
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
